--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ gz = { version = "0.7.4", features = ["harmonic"] }
 gz-msgs-common = "0.7.4"
 toml = "0.8.8"
 serde = {version = "1.0.193",features = ["derive"]}
+quaternion-core = "0.5.0"
 
 
 
