--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ gz-msgs-common = "0.7.4"
 toml = "0.8.8"
 serde = {version = "1.0.193",features = ["derive"]}
 quaternion-core = "0.5.0"
+clap = { version = "4.4.12", features = ["derive"] }
+crossbeam = {version = "0.8.3", features = [ "crossbeam-channel"] }
 
 
 
