--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,18 +7,18 @@ edition = "2021"
 
 [dependencies]
 rpos = {path = "./rpos"}
-gz = { version = "0.7.4", features = ["harmonic"] }
-gz-msgs-common = "0.7.4"
+gz = { version = "0.7.4", features = ["harmonic"] ,optional = true }
+gz-msgs-common = {version = "0.7.4", optional = true}
 toml = "0.8.8"
 serde = {version = "1.0.193",features = ["derive"]}
 quaternion-core = "0.5.0"
 clap = { version = "4.4.12", features = ["derive"] }
-crossbeam = {version = "0.8.3", features = [ "crossbeam-channel"] }
+crsf = "0.1.0"
 
 
 
 [features]
-gzsim = ["rpos/lock_step_enabled"]
+gzsim = ["rpos/lock_step_enabled","gz","gz-msgs-common"]
 
 [build-dependencies]
 nom-kconfig = "0.2.0"
