--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: submodule
-      run: git submodule init --update
+      run: git submodule update --init
     - name: Build
       run: cargo build --verbose
     - name: Run tests
