--- a/.github/workflows/gazebo.yml
+++ b/.github/workflows/gazebo.yml
@@ -19,6 +19,8 @@ jobs:
       uses: awalsh128/cache-apt-pkgs-action@v1.4.1
       with:
         packages: libgz-sim*
+        version: 1.0
+        debug: true
     - uses: actions/checkout@v3
     - name: Install latest nightly
       uses: actions-rs/toolchain@v1
