--- a/.github/workflows/gazebo.yml
+++ b/.github/workflows/gazebo.yml
@@ -15,6 +15,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: update apt
+      run: sudo sh -c 'echo "deb http://packages.osrfoundation.org/gazebo/ubuntu-stable \ `lsb_release -cs` main" > /etc/apt/sources.list.d/gazebo-stable.list' && wget http://packages.osrfoundation.org/gazebo.key -O - | sudo apt-key add - && sudo apt-get update
     - name: Cache APT Packages
       uses: awalsh128/cache-apt-pkgs-action@v1.4.1
       with:
