--- a/.github/workflows/gazebo.yml
+++ b/.github/workflows/gazebo.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Cache APT Packages
       uses: awalsh128/cache-apt-pkgs-action@v1.4.1
       with:
-        packages: libgz-sim*
+        packages: libgz-sim8-dev
         version: 1.0
         debug: true
     - uses: actions/checkout@v3
