--- a/.github/workflows/Dockerfile
+++ b/.github/workflows/Dockerfile
@@ -1,7 +1,7 @@
 FROM ubuntu:22.04
 
 RUN apt-get update
-RUN apt-get install wget
+RUN apt-get install -y wget
 RUN sh -c 'echo "deb http://packages.osrfoundation.org/gazebo/ubuntu-stable `lsb_release -cs` main" > /etc/apt/sources.list.d/gazebo-stable.list' 
 RUN wget http://packages.osrfoundation.org/gazebo.key -O - | apt-key add - 
 RUN apt-get update
