--- a/.github/workflows/Dockerfile
+++ b/.github/workflows/Dockerfile
@@ -3,7 +3,8 @@ FROM ubuntu:22.04
 RUN apt-get update
 RUN apt-get install -y wget
 RUN apt-get install -y gnupg2
-RUN echo "deb http://packages.osrfoundation.org/gazebo/ubuntu-stable `lsb_release -cs` main" > /etc/apt/sources.list.d/gazebo-stable.list
+RUN sh -c 'echo "deb http://packages.osrfoundation.org/gazebo/ubuntu-stable `lsb_release -cs` main" > /etc/apt/sources.list.d/gazebo-stable.list'
+RUN cat /etc/apt/sources.list.d/gazebo-stable.list
 RUN wget http://packages.osrfoundation.org/gazebo.key -O - | apt-key add -
 RUN apt-get update
 
