--- a/.github/workflows/Dockerfile
+++ b/.github/workflows/Dockerfile
@@ -9,5 +9,5 @@ RUN cat /etc/apt/sources.list.d/gazebo-stable.list
 RUN wget http://packages.osrfoundation.org/gazebo.key -O - | apt-key add -
 RUN apt-get update
 
-RUN apt-get install libgz-sim8-dev
+RUN apt-get install -y libgz-sim8-dev
 
