--- a/.github/workflows/gazebo.yml
+++ b/.github/workflows/gazebo.yml
@@ -34,4 +34,4 @@ jobs:
     - name: Build
       run: cargo build --verbose --features gzsim
     - name: Run tests
-      run: cargo test RUST_TEST_THREADS=1 --verbose
+      run: RUST_TEST_THREADS=1 cargo test --verbose
