--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ serde = {version = "1.0.193",features = ["derive"]}
 quaternion-core = "0.5.0"
 clap = { version = "4.4.12", features = ["derive"] }
 crsf = "0.1.0"
+termion = "3.0.0"
 
 
 
