--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,6 +15,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: update apt
+      run: sudo apt-get update
+    - name: Cache APT Packages
+      uses: awalsh128/cache-apt-pkgs-action@v1.4.1
+      with:
+        packages: libudev-dev
+        version: 1.0
     - uses: actions/checkout@v3
     - name: Install latest nightly
       uses: actions-rs/toolchain@v1
@@ -27,4 +34,4 @@ jobs:
     - name: Build
       run: cargo build --verbose
     - name: Run tests
-      run: cargo test --verbose
+      run: RUST_TEST_THREADS=1 cargo test --verbose
