--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ quaternion-core = "0.5.0"
 clap = { version = "4.4.12", features = ["derive"] }
 termion = "3.0.0"
 crsf = "1.0.1"
-serialport = "4.3.0"
+serialport = {version = "4.3.0",default-features = false}
 
 [dev-dependencies]
 bitfield = "0.14"
