--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ clap = { version = "4.4.12", features = ["derive"] }
 termion = "3.0.0"
 crsf = "1.0.1"
 serialport = {version = "4.3.0",default-features = false}
+spidev = "0.6.0"
 
 [dev-dependencies]
 bitfield = "0.14"
