--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ rand = "0.8.4"
 
 
 [features]
-default = []
+default = ["gzsim"]
 gzsim = ["rpos/lock_step_enabled","gz","gz-msgs-common"]
 
 [build-dependencies]
