--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ crsf = "1.0.1"
 serialport = {version = "4.3.0",default-features = false}
 spidev = "0.6.0"
 mavlink = "0.13.1"
+dashmap = "6.1.0"
 
 [dev-dependencies]
 bitfield = "0.14"
